--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr>
     <div class="grid_presentation">
         <div class="grid_presentation_1">
-            <img class="reveal_left" src="img/arbre.jpg" alt="En promenade">
+            <img class="reveal_left" src="img/arbre.jpg" alt="C'est moi!">
         </div>
         <div class="grid_presentation_2 reveal_right">
         <p>
@@ -179,7 +179,7 @@
     <div>
         <article>
             <div class="project_round reveal">
-                <a target="_blank" href="https://enas-elm.github.io/Pokemon-API/"><img src="img/pokedex.jpg" alt="UX application streaming"></a>
+                <a target="_blank" href="https://enas-elm.github.io/Pokemon-API/"><img src="img/pokedex.jpg" alt="Pokedex API"></a>
             </div>
             <h3>Découverte des API avec Javascript</h3>
             <hr>
@@ -193,7 +193,7 @@
 
         <article>
             <div class="project_round reveal">
-                <a target="_blank" href="https://enas-elm.github.io/Integration-Maquette-Servion/"><img src="img/servion.JPG" alt="UX application streaming"></a>
+                <a target="_blank" href="https://enas-elm.github.io/Integration-Maquette-Servion/"><img src="img/servion.JPG" alt="Intégration Maquette"></a>
             </div>
             <h3>Intégration d'une maquette</h3>
             <hr>
@@ -207,7 +207,7 @@
 
         <article>
             <div class="project_round reveal">
-               <a target="_blank" href="https://www.figma.com/file/3Jb3HQXvAj5Afkg6tEy4iK/Tuileries-Enas-El-Mershati?node-id=0%3A1"><img src="img/tuilerie2.jpg" alt="UX application streaming"></a>
+               <a target="_blank" href="https://www.figma.com/file/3Jb3HQXvAj5Afkg6tEy4iK/Tuileries-Enas-El-Mershati?node-id=0%3A1"><img src="img/tuilerie2.jpg" alt="UI Figma"></a>
             </div>
             <h3>L'UI avec Figma</h3>
             <hr>
