--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <div>
         <article>
             <div class="project_round reveal">
-                <a target="_blank" href="https://enas-elm.github.io/Pokemon-API/"><img src="img/pokedex.jpg" alt="Pokedex API"></a>
+                <a target="_blank" href="https://enas-elm.github.io/Pokemon-API/"><img src="img/pokedex.JPG" alt="Pokedex API"></a>
             </div>
             <h3>Découverte des API avec Javascript</h3>
             <hr>
@@ -220,7 +220,7 @@
 
         <article>
             <div class="project_round reveal">
-                <a target="_blank" href="https://xd.adobe.com/view/c36102d1-cd93-411d-aa73-e3ba96fb1d31-9632/?fullscreen"><img src="img/streaming.jpg" alt="UX application streaming"></a>
+                <a target="_blank" href="https://xd.adobe.com/view/c36102d1-cd93-411d-aa73-e3ba96fb1d31-9632/?fullscreen"><img src="img/streaming.JPG" alt="UX application streaming"></a>
             </div>
             <h3>UI/UX avec Adobe XD</h3>
             <hr>
