--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p>
                 Ce travaille consistait à réaliser un petit Pokédex en récupérant des API de  <a target="_blank" href="https://pokeapi.co/">pokeapi.co</a> 
                 <br>
-                <a target="_blank"  class="underline_hover" href="https://enas-elm.github.io/Pokemon-API/">Lien du site &nbsp;</a>
+                <a target="_blank"  class="underline_hover" href="https://enas-elm.github.io/Pokemon-API/">Lien du site</a>&nbsp;
                 <a  target="_blank" class="underline_hover" href="https://github.com/enas-elm/Pokemon-API">Lien github</a>
             </p>
         </article>
@@ -200,7 +200,7 @@
             <p>
                 Voici l'intégration d'une maquette destiné à un rendu scolaire.
                 <br>
-                <a target="_blank" class="underline_hover" href="https://enas-elm.github.io/Integration-Maquette-Servion/">Lien du site &nbsp;</a>
+                <a target="_blank" class="underline_hover" href="https://enas-elm.github.io/Integration-Maquette-Servion/">Lien du site</a>&nbsp;
                 <a target="_blank" class="underline_hover" href="https://github.com/enas-elm/Integration-Maquette-Servion">Lien github</a>
             </p>
         </article>
