--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             Pour voir ce que j'ai pu faire, je vous invite à visiter ce portfolio et mon CV !
 
             <br><br><br>
-            <a href="file/CV_Enas_ELMERSHATI.pdf" target="_blank"><span>Voir mon CV</span></a>
+            <a href="file/CV_Enas_EL_MERSHATI.pdf" target="_blank"><span>Voir mon CV</span></a>
         </p>
         </div>
     </div>
@@ -163,6 +163,12 @@
                 <p>Photoshop m'a servi plusieurs fois pour faire des retouches, que ce soit pour un coup de beauté ou pour ajouter, retirer ou modifier des éléments d'une image.</p>
             </div>
             <br/>
+
+            <button class="toggle reveal"><!-- Photoshop--><?xml version="1.0"?><svg fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 30 30" width="30px" height="30px">    <path d="M 6 4 C 4.895 4 4 4.895 4 6 L 4 24 C 4 25.105 4.895 26 6 26 L 24 26 C 25.105 26 26 25.105 26 24 L 26 6 C 26 4.895 25.105 4 24 4 L 6 4 z M 19.660156 9.2480469 C 20.282156 9.2480469 20.707031 9.6445469 20.707031 10.185547 C 20.707031 10.726547 20.282156 11.123047 19.660156 11.123047 C 19.045156 11.123047 18.615234 10.726547 18.615234 10.185547 C 18.615234 9.6445469 19.045156 9.2480469 19.660156 9.2480469 z M 11.792969 9.953125 L 13.775391 9.953125 L 17.28125 19.818359 L 15.388672 19.818359 L 14.554688 17.296875 L 10.925781 17.296875 L 10.076172 19.818359 L 8.2929688 19.818359 L 11.792969 9.953125 z M 12.6875 11.832031 L 11.335938 15.900391 L 14.144531 15.900391 L 12.804688 11.832031 L 12.6875 11.832031 z M 18.820312 12.339844 L 20.507812 12.339844 L 20.507812 19.818359 L 18.820312 19.818359 L 18.820312 12.339844 z"/></svg></button>
+            <div class="div_appear">
+                <p>J'apprécie particulièrement l'utilisation d'Illustrator pour réaliser des illustrations personnelles et mettre en couleur des dessins.</p>
+            </div>
+            <br/>
                   
         </div>
     </div>
@@ -230,6 +236,10 @@
                 <a target="_blank" class="underline_hover" href="https://xd.adobe.com/view/c36102d1-cd93-411d-aa73-e3ba96fb1d31-9632/?fullscreen">Lien de l'Adobe XD</a>
             </p>
         </article>
+
+        <p class="text-align">Découvrez plus de projet sur mon github <br>
+            <a target="_blank" class="underline_hover" href="https://github.com/enas-elm">enas-elm</a>
+        </p>
         
     </div>
   
