--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <h3>Bot Discord avec NodeJS</h3>
             <hr>
             <p>
-                Réalisation d'un bot discord en équipe  <br>  <a target="_blank" class="underline_hover" href="https://github.com/joannemas/DokiBoti">Lien github</a>  <br>
+                Réalisation d'un bot discord en équipe  <br>  <a target="_blank" class="underline_hover" href="https://dokiboti-website.vercel.app/">Lien github</a>  <br>
                 Une Landing Page qui aurai servi à héberger le bot si celui-ci était en mis ligne <br> <a target="_blank" class="underline_hover" href="https://dokiboti-website.vercel.app/">Lien du site</a>
                 <a target="_blank" class="underline_hover" href="https://github.com/enas-elm/DokiBoti-Website">Lien github</a>
             </p>
