--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
 
         <article>
             <div class="project_round reveal">
-                <a target="_blank" href="https://xd.adobe.com/view/c36102d1-cd93-411d-aa73-e3ba96fb1d31-9632/?fullscreen"><img src="img/discord.jpg" alt="Bot Discord"></a>
+                <a target="_blank" href="https://github.com/joannemas/DokiBoti"><img src="img/discord.jpg" alt="Bot Discord"></a>
             </div>
             <h3>Bot Discord avec NodeJS</h3>
             <hr>
             <p>
-                Réalisation d'un bot discord en équipe  <br>  <a target="_blank" class="underline_hover" href="https://dokiboti-website.vercel.app/">Lien github</a>  <br>
+                Réalisation d'un bot discord en équipe  <br>  <a target="_blank" class="underline_hover" href="https://github.com/joannemas/DokiBoti">Lien github</a>  <br>
                 Une Landing Page qui aurai servi à héberger le bot si celui-ci était en mis ligne <br> <a target="_blank" class="underline_hover" href="https://dokiboti-website.vercel.app/">Lien du site</a>
                 <a target="_blank" class="underline_hover" href="https://github.com/enas-elm/DokiBoti-Website">Lien github</a>
             </p>
